tests/specs/ecosystem/std/media_types/0_210_0.test
std/media-types/0.210.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-type]: missing explicit type in the public API
  --> /_util.ts:17:14
   | 
17 | export const extensions = new Map<string, string[]>();
   |              ^^^^^^^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


